Add get user use case
